--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "noImplicitAny": true,
     "plugins": [
       {
         "name": "next"
@@ -21,6 +22,10 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts",
+              "gyro-types.d.ts",
+              "**/*.ts",
+              "**/*.tsx",
+              ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
