--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,10 +22,12 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts",
-              "gyro-types.d.ts",
-              "**/*.ts",
-              "**/*.tsx",
-              ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "gyro-types.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
