--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "prettier . --write"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
